--- a/apps/camera/style/viewfinder.css
+++ b/apps/camera/style/viewfinder.css
@@ -18,8 +18,8 @@
   justify-content: center;
   overflow: hidden;
   opacity: 0.001; /* 1 */
-  /*will-change: opacity;*/ /* 2 */
-  transition: opacity 150ms ease-in-out;
+  will-change: opacity; /* 2 */
+  transition: opacity 200ms ease-in-out;
 }
 
 /**
