--- a/apps/camera/style/viewfinder.css
+++ b/apps/camera/style/viewfinder.css
@@ -2,10 +2,6 @@
 /**
  * 1. PERF: Don't transition to 0 to
  *    avoid composite layer being discarded.
- * 2. Disabled `will-change` due to performance
- *    issues on Hamachi. Leaving in place so that
- *    we can re-introduce as a later date to improve
- *    frame-rate on more capable devices.
  */
 
 .viewfinder {
@@ -17,9 +13,10 @@
   height: 100%;
   justify-content: center;
   overflow: hidden;
-  opacity: 0.001; /* 1 */
-  will-change: opacity; /* 2 */
-  transition: opacity 200ms ease-in-out;
+  /*opacity: 0.001;*/ /* 1 */
+  /*will-change: opacity;*/
+  /*transform: translateZ(1px);*/
+  /*transition: opacity 200ms ease-in-out;*/
 }
 
 /**
